# brandonw-src

./: .gitignore  Dockerfile  copy_to_local.sh  run.sh  start_novnc.sh
arduino_code/: keyboard_control_stepper.ino
arduino_code/arm_with_gamepad/: final.ino
arduino_code/keyboard_control_stepper/: keyboard_control_stepper.ino
bad_keyboard_controller/: CMakeLists.txt  package.xml
bad_keyboard_controller/scripts/: keyboard_relay.py
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/lib/pkgconfig/: arm_sim.pc  gazebo_tutorials.pc  keyboard_control.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc
catkin_ws/devel/share/arm_sim/cmake/: arm_simConfig.cmake
catkin_ws/devel/share/gazebo_tutorials/cmake/: gazebo_tutorialsConfig.cmake
catkin_ws/devel/share/keyboard_control/cmake/: keyboard_controlConfig.cmake
catkin_ws/devel/share/roseus/ros/keyboard_control/: manifest.l
catkin_ws/devel/share/rrbot_control/cmake/: rrbot_controlConfig.cmake
catkin_ws/devel/share/rrbot_description/cmake/: rrbot_descriptionConfig.cmake
catkin_ws/devel/share/rrbot_gazebo/cmake/: rrbot_gazeboConfig.cmake
catkin_ws/src/arm_gamepad_controller/: CMakeLists.txt
catkin_ws/src/arm_gamepad_controller/scripts/: #94481a0de7e4937879aeae8b573b94c28f701d43#  gamepad_controller.py
catkin_ws/src/arm_keyboard_controller/: CMakeLists.txt  package.xml
catkin_ws/src/arm_keyboard_controller/scripts/: keyboard_controller.py
catkin_ws/src/arm_sim/: CMakeLists.txt  package.xml
catkin_ws/src/arm_sim/config/: activate.yaml  axis_1.yaml  axis_1_controller.yaml  axis_2.yaml  axis_2_controller.yaml  axis_3_controller.yaml  axis_5_controller.yaml  axis_6_controller.yaml  gazebo_ros_control_params.yaml  joints.yaml
catkin_ws/src/arm_sim/launch/: controllers.launch  display.launch  gazebo.launch  joints.launch
catkin_ws/src/arm_sim/rviz/: urdf.rviz
catkin_ws/src/arm_sim/urdf/: arm_dimensions.xacro  arm_macros.xacro  arm_model.urdf  arm_model.xacro  r2d2.xacro
catkin_ws/src/ik_solver/: CMakeLists.txt
catkin_ws/src/ik_solver/src/: ik_solver.cc
catkin_ws/src/ik_solver/srv/: IKSolve.srv
catkin_ws/src/joint_state_service/: CMakeLists.txt  package.xml
catkin_ws/src/joint_state_service/scripts/: joint_state_service_server.py
catkin_ws/src/joint_state_service/srv/: JointPosition.srv
catkin_ws/src/keyboard_control/: CMakeLists.txt
catkin_ws/urdf/: basic_model.urdf
devel/lib/pkgconfig/: arm_keyboard_controller.pc
devel/share/arm_keyboard_controller/cmake/: arm_keyboard_controllerConfig.cmake
ros2_ws/devel/: .rosinstall  local_setup.sh
ros2_ws/devel/lib/keyboard_control/: keypubber
ros2_ws/devel/share/keyboard_control/cmake/: keyboard_controlConfig.cmake
ros2_ws/src/control/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/: package.xml
ros2_ws/src/keyboard_control/src/: keypubber.cc
ros2_ws/src/stepper/: CMakeLists.txt  package.xml
src/arm_gamepad_controller/: package.xml
src/arm_gamepad_controller/msg/: Gamepad.msg
src/arm_gamepad_controller/scripts/: gamepad_controller.py
src/arm_keyboard_controller/: package.xml
src/arm_sim/: package.xml
src/arm_sim/config/: axis_3_controller.yaml  axis_4_controller.yaml
src/arm_sim/settings/: activate.yaml
src/arm_sim/urdf/: arm_dimensions.xacro  arm_macros.xacro  arm_model.xacro
src/arm_sim/world/: empty.sdf
src/controller_coordinator/: CMakeLists.txt  package.xml
src/controller_coordinator/cc/: #d147981d0d87ef05be432fc7a89bb01822923ca1#  controller_map.hh
src/controller_coordinator/cc/controllers/: controller.hh  keyboard_controller.hh
src/controller_coordinator/src/: controller_coordinator.cc
src/controller_coordinator/srv/: AddController.srv
src/ik_solver/: CMakeLists.txt  package.xml
src/ik_solver/src/: ik_solver.cc
src/input_processor/: CMakeLists.txt  package.xml
src/keyboard_controller/: CMakeLists.txt  package.xml
src/keyboard_controller/scripts/: keyboard_input_relay.py  simple_keyboard_input.py
src/keyboard_relay/: CMakeLists.txt  package.xml
