<?xml version="1.0"?>
<package format="2">
  <name>arm_gamepad_controller</name>
  <version>0.0.1</version>
  <description>This allows for the control of the arm using the keyboard</description>

  <maintainer email="theprabab@gmail.com">Prabhvir Babra</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
