<?xml version="1.0"?>
<package format="2">
  <name>keyboard_controller</name>
  <version>0.0.0</version>
  <description>The keyboard_controller package</description>

  <maintainer email="theprabab@gmail.com">root</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <export>

  </export>
</package>
