<?xml version="1.0"?>
<package format="2">
  <name>arm_sim</name>
  <version>0.0.0</version>
  <description>The arm_sim package provides a model of the 6-axis </description>

  <maintainer email="theprabab@gmail.com">Prabhvir Babra</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
