<?xml version="1.0"?>
<package format="2">
  <name>joint_state_service</name>
  <version>0.0.0</version>
  <description>The joint_state_service package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
